# flash-pop

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  fused_retention.py  pop_retention.py  pyproject.toml  test_fused_retention.py  test_pop_retention.py
flash_pop/: __init__.py  diffusion_retnet.py  pop_retnet.py  recurrent_state.py  retention_layer.py  retnet.py  utils.py  xpos_emb.py
flash_pop/fused_retention/: __init__.py  fused_chunk_bwd.py  fused_chunk_fwd.py  reference.py
flash_pop/modules/: __init__.py  adaln.py  timestep.py
flash_pop/pop_retention/: __init__.py  pop_bwd.py  pop_fwd.py
fused_retention/: __init__.py  fused_chunk_bwd.py  fused_chunk_fwd.py  reference.py
pop_retention/: __init__.py  pop_bwd.py  pop_fwd.py
tests/: test_diffusion_retnet.py  test_fused_retention.py  test_pop_retention.py  test_pop_retnet.py  test_retention_layer.py
