[project]
name = "flash-pop"
version = "0.1.0"
description = "A hardware-aware efficient implementation of RetNet and POP."
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lior Cohen", email = "liorcohen5@campus.technion.ac.il" },
]
dependencies = [
    "tilelang>=0.1.3",
    "loguru"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
